<resources>
    <string name="app_name">Pomodoro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Pomodoro</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="sua_atividade">Sua atividade</string>
    <string name="iniciar_pomodoro">Iniciar Pomodoro</string>
    <string name="lista_de_atividades">Lista de atividades</string>
    <string name="relogio">Relógio</string>
    <string name="configuracoes">Configurações</string>
    <string name="tempo_do_pomodoro">Tempo do Pomodoro:</string>
    <string name="tempo_do_descanso_curto">Tempo do descanso curto:</string>
    <string name="minutos">Minutos</string>
    <string name="tempo_do_descanso_longo">Tempo do descanso longo:</string>
    <string name="som_do_alarme">Som do alarme:</string>
    <string name="som_do_rel_gio">Som do relógio:</string>
    <string name="salvar">Salvar</string>
    <string name="definir_hora"><u>Definir hora</u></string>
    <string name="cadastro_de_nova_agenda">Cadastro de nova Agenda</string>
    <string name="data">Data:</string>
    <string name="hora">Hora:</string>
    <string name="agendar_pomodoro">Agendar Pomodoro</string>
    <string name="hora_para_notificacao">Hora para notificação:</string>
    <string name="excluir">Excluir</string>
    <string name="atividade">Atividade:</string>
    <string name="nome">Nome:</string>
    <string name="descri_o">Descrição:</string>
    <string name="tempo">Tempo:</string>
    <string name="nova_atividade">Nova Atividade</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cadastro_de_novo_usuario">Cadastro de novo usuário</string>
    <string name="usuario">Usuário:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nao_possui_conta_cadastrar"><u>Não possui conta? Cadastrar</u></string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="ja_possui_cadastro_entrar"><u>Já possui cadastro? Entrar</u></string>
    <string name="digite_seu_usuario">Digite seu usuário</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="pergunta">Pergunta</string>
    <string name="ct">CT</string>
    <string name="c">C</string>
    <string name="nd">ND</string>
    <string name="d">D</string>
    <string name="dt">DT</string>
    <string name="deixe_seu_comentario">Deixe seu comentário</string>
    <string name="questionario">Questionário</string>
    <string name="usando_pomodoro">Usando Pomodoro?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="marque_a_resposta_mais_correta">Marque a resposta mais correta:</string>
    <string name="help">help</string>
    <string name="tutoriais">Tutoriais</string>
    <string name="concluir_atividade">Concluir atividade</string>
    <string name="lista_de_atividades_nova_atividade"><![CDATA[Lista de atividades > Nova atividade]]></string>
    <string name="agendar_pomodoro_cadastro_de_nova_agenda"><![CDATA[Agendar Pomodoro > Cadastro de nova agenda]]></string>
    <string name="grupos">Grupos</string>
    <string name="em">Em</string>
    <string name="date">Date</string>
    <string name="as">às</string>
    <string name="notificacoes">Notificação às</string>
</resources>