<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atividade"
            android:textStyle="bold" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/em" />

        <TextView
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold" />

        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/as" />

        <TextView
            android:id="@+id/hour"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="186dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notificacoes" />

        <TextView
            android:id="@+id/hour_notify"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora" />

    </LinearLayout>

</LinearLayout>

