<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:id="@+id/layout"
    android:layout_marginTop="16dp"
    tools:context=".NewAgenda">

    <TextView
        android:id="@+id/tv_agenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/agendar_pomodoro_cadastro_de_nova_agenda" />

    <TextView
        style="@style/textView"
        android:id="@+id/tv_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atividade" />

    <Spinner
        android:id="@+id/tvActivity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
<!--android:background="@drawable/spinner_shape"-->

    <TextView
        style="@style/textView"
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        style="@style/textView"
        android:id="@+id/tv_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="time"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/select_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000ff"
        android:textAllCaps="false"
        android:layout_gravity="left"
        android:text="@string/definir_hora"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        style="@style/textView"
        android:id="@+id/tv_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hora_para_notificacao" />

    <EditText
        android:id="@+id/notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="time"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/select_hour_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#0000ff"
        android:textAllCaps="false"
        android:layout_gravity="left"
        android:text="@string/definir_hora"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/save_agenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/salvar" />

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/delete_agenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/excluir" />

    </LinearLayout>

</LinearLayout>