<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".PomodoroFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pomodoro" />

    <TextView
        android:id="@+id/tv_activity"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atividade" />

    <Spinner
        android:id="@+id/tvActivity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_shape"
        android:textColor="@color/red" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/relogio"
        android:src="@drawable/ic_baseline_timelapse_24"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvCountDownTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="00:00"
        android:textColor="@color/tomato"
        android:textSize="50sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_pomodoro"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nova_atividade"
        tools:ignore="UsingOnClickInXml" />

</LinearLayout>