<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            style="@style/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracoes"/>

        <TextView
            style="@style/textView"
            android:id="@+id/tvPomodoroTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempo_do_pomodoro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pomodoroTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="number"
                android:layout_weight="1"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                style="@style/textView"
                android:id="@+id/tvPomodoroMinutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/minutos" />

        </LinearLayout>

        <TextView
            style="@style/textView"
            android:id="@+id/tvShortBreakTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempo_do_descanso_curto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/shortBreakTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="number"
                android:layout_weight="1"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                style="@style/textView"
                android:id="@+id/tvShortBreakMinutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/minutos" />

        </LinearLayout>

        <TextView
            style="@style/textView"
            android:id="@+id/tvLongBreakTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempo_do_descanso_longo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/longBreakTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="number"
                android:layout_weight="1"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                style="@style/textView"
                android:id="@+id/tvLongBreakMinutes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/minutos" />

        </LinearLayout>

        <TextView
            style="@style/textView"
            android:id="@+id/alarmSound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/som_do_alarme" />

        <TextView
            android:id="@+id/alarm_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="#0000ff"
            android:layout_margin="20dp"/>

        <TextView
            style="@style/textView"
            android:id="@+id/clockSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/som_do_rel_gio" />

        <Switch
            android:id="@+id/clock_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/clock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000ff"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/save_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/salvar" />

    </LinearLayout>

</ScrollView>